finally CLI "split" command is running as before